@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.3
 
+	- Removed autoconf/configure and CMake tests and defines for
+	  unused function strtoll().
 	- Fixed access of protected member (STR #2903)
 	- Implemented support for the Mac OS text input system that deals with character composition
 	  and input of languages with large character sets (e.g., Chinese and Japanese). This
